# emba

./: CMakeLists.txt  README.md  package.xml
calib/: DVS-playroom.yaml
docs/: execution.md  installation.md  parameters.md
include/emba/: emba.h  event_map.h  model.h  params.h  state.h
include/image_rec/: poisson_reconstruction.h
include/utils/: eigen_utils.h  equirectangular_camera.h  event_pano_warper.h  image_utils.h  pose_manager.h  rosbag_loading.h  so3_funcs.h  trajectory.h
launch/: bay.launch  bicycle.launch  boxes.launch  city.launch  dynamic.launch  playroom.launch  poster.launch  shapes.launch  street.launch  town.launch
src/emba/: emba.cpp  model.cpp  node.cpp  solver.cpp
src/image_rec/: laplace.cpp  poisson_reconstruction.cpp
src/test/: event_map_test.cpp  event_warper_test.cpp  so3_funcs_test.cpp
src/utils/: eigen_utils.cpp  event_pano_warper.cpp  image_utils.cpp  pose_manager.cpp  rosbag_loading.cpp  trajectory.cpp
