<?xml version="1.0"?>
<package format="2">
  <name>emba</name>
  <version>0.0.0</version>
  <description>Event-based Mosaicing Bundle Adjustment (ECCV 2024)</description>
  <maintainer email="shuang.guo@campus.tu-berlin.de">Shuang Guo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>dvs_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>tf_conversions</depend>
  <depend>rosbag</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>camera_info_manager</depend>

  <export>
  </export>

</package>
